--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "uglify-es": "^3.0.17"
   },
   "dependencies": {
+    "http-server": "^0.11.1",
     "jsfeat": "git+https://github.com/inspirit/jsfeat",
-    "numeric": "^1.2.6",
     "mosse": "^0.1.1",
-    "raf": "^3.3.2",
-    "promise-polyfill": "^6.0.2"
+    "numeric": "^1.2.6",
+    "promise-polyfill": "^6.0.2",
+    "raf": "^3.3.2"
   }
 }
